# scrutiny

./: .gitignore  Cargo.toml  README.md  SKILL.md  release.toml
.github/workflows/: release.yml
config/: default.toml
crates/scrutiny-cli/: Cargo.toml
crates/scrutiny-cli/src/: main.rs
crates/scrutiny-core/: Cargo.toml
crates/scrutiny-core/src/: agent_runner.rs  config.rs  diff_loc.rs  eval.rs  findings.rs  forge_bulk.rs  forge_cmd.rs  gh.rs  git.rs  lib.rs  map.rs  mdterm.rs  pack.rs  parley_cmd.rs  paths.rs  plan.rs  pr.rs  pr_cmd.rs  prepush.rs  review_cmd.rs  review_session.rs  runtime.rs  scan.rs  score.rs  signals.rs  skills_install.rs  spinner.rs  taxonomy.rs  terminal.rs
crates/scrutiny-core/src/forge/: brief.rs  complexity.rs  context.rs  fetch.rs  figma.rs  mod.rs  plan.rs  scaffold.rs  tools.rs  verify.rs
crates/scrutiny-core/src/pack/: budget.rs  doc.rs  hunk.rs  markdown.rs  mod.rs  outline.rs  slice.rs  xref.rs
crates/scrutiny-core/src/parley/: fetch.rs  fixes.rs  mod.rs  plan.rs  reply.rs
crates/scrutiny-core/src/scan/: i18n.rs  mod.rs
crates/scrutiny-core/src/treesitter/: mod.rs
crates/scrutiny-core/src/treesitter/queries/: go.decls.scm  go.refs.scm  javascript.decls.scm  javascript.refs.scm  python.decls.scm  python.refs.scm  ruby.decls.scm  ruby.refs.scm  rust.decls.scm  rust.refs.scm  typescript.decls.scm  typescript.refs.scm
scripts/: ensure-bin.sh
skills/forge/: SKILL.md
skills/forge/scripts/: ensure-bin.sh
skills/parley/: SKILL.md
skills/parley/scripts/: ensure-bin.sh
skills/scrutiny/: SKILL.md
skills/scrutiny/scripts/: ensure-bin.sh
