[workspace]
resolver = "2"
members = ["crates/scrutiny-core", "crates/scrutiny-cli"]

[workspace.package]
version = "0.1.1"
edition = "2021"
license = "MIT"
authors = ["Scrutiny"]
# Skill + GitHub Releases only — never crates.io (name also taken upstream).
publish = false

[workspace.dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4", features = ["derive"] }
globset = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
toml = "0.8"
tempfile = "3"
