[workspace]
resolver = "2"
members = ["crates/scrutiny-core", "crates/scrutiny-cli"]

[workspace.package]
version = "0.1.14"
edition = "2021"
license = "MIT"
authors = ["Scrutiny"]
# Skill + GitHub Releases only — never crates.io (name also taken upstream).
publish = false

[workspace.dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4", features = ["derive"] }
console = "0.15"
dialoguer = "0.11"
globset = "0.4"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
toml = "0.8"
tempfile = "3"
tree-sitter = "0.25"
streaming-iterator = "0.1"
tree-sitter-rust = "0.24"
tree-sitter-ruby = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-go = "0.23"
