[package]
name = "scrutiny-core"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
chrono.workspace = true
console.workspace = true
dialoguer.workspace = true
flate2.workspace = true
globset.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true
tree-sitter.workspace = true
streaming-iterator.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-ruby.workspace = true
tree-sitter-javascript.workspace = true
tree-sitter-typescript.workspace = true
tree-sitter-python.workspace = true
tree-sitter-go.workspace = true

[dev-dependencies]
tempfile.workspace = true
